# topological-sort-backport

./: .gitignore  LICENSE  README.md  graphlib.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
graphlib/: sorter.py
tests/: test_topological_sort_backport.py
topological_sort_backport/: __init__.py  sorter.py
