[tool.poetry]
name = "topological-sort-backport"
version = "0.2.1"
description = ""
authors = ["Jonas Bulik <jonas@bulik.dev>"]
repository = "https://github.com/MrGreenTea/topological-sort-backport"

[tool.poetry.dependencies]
python = ">=3.6 <3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
