[tool.poetry]
name = "graphlib-backport"
packages = [
 { include = "graphlib.py"}
]
version = "0.4.0"
description = ""
authors = ["Jonas Bulik <jonas@bulik.dev>"]
repository = "https://github.com/MrGreenTea/topological-sort-backport"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Utilities",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = ">=3.6 <3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
